--- a/frontend/src/components/chat.css
+++ b/frontend/src/components/chat.css
@@ -1,17 +1,16 @@
 .container {
     height: 80vh;
-    width: 500px;
+    width: 1200px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
     border-radius: 10px;
+    padding: 5px;
 
 }
 
 .chat-area {
-    display: flex;
-    flex-direction: column;
     background-color: black;
     height: 85%;
     width: 100%;
@@ -21,24 +20,33 @@
 }
 
 .input-area {
-    background-color: #2b2b2b;
-    height: 15%;
+    background-color: #5C8374;
+    color:#183D3D;
     width: 100%;
-    padding: 7%;
+    padding: 3%;
     border-bottom-right-radius: 10px;
     border-bottom-left-radius: 10px;
 }
 
 .input-area input {
-    width: 75%;
+    width: 85%;
     margin-right: 5%;
-    height: 50px;
+    height: 40px;
     padding: 12px 20px;
+    background-color: #93B1A6;
+    color: #183D3D;
+    border: none;
+    border-radius: 50px;
+    outline: none;
 
 }
 
 
 .input-area button {
-    width: 20%;
-    height: 50px
+    width: 10%;
+    height: 40px;
+    background-color: #93B1A6;
+    color: #183D3D;
+    border: none;
+    border-radius: 50px;
 }
