--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,5 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
 * {
   box-sizing: border-box;
+  font-size: 18px;
 }
 :root {
   color-scheme: light dark;
@@ -14,6 +16,7 @@
 }
 
 body {
+font-family: 'Roboto', sans-serif;
   margin: 0;
   display: flex;
   place-items: center;
