--- a/frontend/src/components/message.css
+++ b/frontend/src/components/message.css
@@ -5,9 +5,11 @@
     justify-content: center;
     padding: 20px 10px;
     border-bottom: 1px solid black;
+        color: white;
 }
 
 .message {
+    color:white;
     font-size: 14px;
 }
 .date {
